--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -7,7 +7,7 @@ nav img{
     margin-top: 15px;
 }
 .menu{
-   margin: 10px auto;
+   margin: 30px auto;
 }
 .menu a {
     margin-left: 75px;
@@ -26,12 +26,20 @@ nav img{
    height: 475px;
 }
 .category{
-   margin: 10px auto;
+   text-align: center;
 }
 .category a{
     text-decoration: none;
-    margin-left: 70px;
+    margin-left: 100px;
     color: #000;
     font-weight: bold;
     font-size: 30px;
+}
+.category a:hover{
+    text-decoration: none;
+    margin-left: 100px;
+    color: rgb(214, 41, 10);
+    font-weight: bold;
+    font-size: 30px;
+    border-bottom: 5px solid rgb(214, 41, 10);
 }
